<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_firstfragment_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:orderInCategory="1"
        android:title="@string/menu_item_firstfragment_search_text"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_item_firstfragment_checked"
        android:icon="@drawable/ic_baseline_fact_check_24"
        android:orderInCategory="2"
        android:title="@string/menu_item_firstfragment_checked_text"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_item_firstfragment_avatar"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:orderInCategory="3"
        android:title="@string/menu_item_firstfragment_avatar_text"
        app:showAsAction="ifRoom" />
</menu>