<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/firstFragment">

    <fragment
        android:id="@+id/firstFragment"
        android:name="com.example.gb_hw_les_4.ui.fragments.FirstFragment"
        android:label="@string/firstFragment_label"
        tools:layout="@layout/fragment_first" />
    <fragment
        android:id="@+id/secondFragment"
        android:name="com.example.gb_hw_les_4.ui.fragments.SecondFragment"
        android:label="@string/secondFragment_label"
        tools:layout="@layout/fragment_second" />
    <fragment
        android:id="@+id/thirdFragment"
        android:name="com.example.gb_hw_les_4.ui.fragments.ThirdFragment"
        android:label="@string/thirdFragment_label"
        tools:layout="@layout/fragment_third" />
</navigation>